--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "openai": "^3.3.0",
     "readline-sync": "^1.4.10"
   }
