--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
