--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.8",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "openai": "^3.3.0",
+    "openai": "^4.28.4",
     "readline-sync": "^1.4.10"
   }
 }
