--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "fuzzball": "^2.1.2",
     "openai": "^3.3.0",
     "readline-sync": "^1.4.10"
   }
