--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "fuzzball": "^2.1.2",
     "openai": "^3.3.0",
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.1.1",
+    "eslint": "^9.1.1",
+    "globals": "^15.1.0"
   }
 }
